--- a/seedConfig.cfg
+++ b/seedConfig.cfg
@@ -1,4 +1,4 @@
 seedJobs = [
-  'First Job': 'test1/seed.groovy',
-  'Second Job': 'test2/seed.groovy'
+  'First Job': 'test1/seed1.groovy',
+  'Second Job': 'test2/seed2.groovy'
 ]
