--- a/seedConfig.cfg
+++ b/seedConfig.cfg
@@ -1,4 +1,4 @@
 seedJobs = [
-  'First Job': 'test1/seed1.groovy',
+  'First Job Updated': 'test1/seed1.groovy',
   'Second Job': 'test2/seed2.groovy'
 ]
