--- a/seedConfig.cfg
+++ b/seedConfig.cfg
@@ -1,4 +1,3 @@
 seedJobs = [
-  'First Job Updated': 'test1/seed1.groovy',
-  'Second Job': 'test2/seed2.groovy'
+  'First Job Updated': 'test1/seed1.groovy'
 ]
