--- a/seedConfig.cfg
+++ b/seedConfig.cfg
@@ -1,3 +1,4 @@
 seedJobs = [
-  'First Job Updated': 'test1/seed1.groovy'
+  'First Job Updated': 'test1/seed1.groovy',
+  'Second Job': 'test2/seed2.groovy'
 ]
